fix: updated about section

--- a/about.html
+++ b/about.html
@@ -100,12 +100,14 @@
           <div class="col-lg-7 about-img" style="background-image: url(assets/img/about.jpg);"></div>
 
           <div class="col-lg-7">
-            <h2>Consequatur eius et magnam</h2>
+            <h2>We Build Your Dreams</h2>
             <div class="our-story">
               <h4>Est 1988</h4>
               <h3>Our Story</h3>
-              <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem. Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur laudantium temporibus dicta minus dolor.</p>
-              <ul>
+              <p>At <b>LandmarkRealty</b>, we are dedicated to planning and building eco-friendly and appealing properties with a target to transcend our customers need with our experience in real estate development. We will always continue achieving monumental standards of development coalesced with imaginative ideas, best technology, knowledge and skills.</p>
+              <p>We believe in constant upgrades of our process product and people. Every project in <b>LandmarkRealty</b> is well planned and selected to ensure high appreciation for our customers.</p>
+              <p>Our dedication and involvement in all our projects results in the end product that satisfies our customers beyond their expectations. <b>LandmarkRealty</b> is professionally managed organization with experience and expertise to offer complete customer satisfaction.</p>
+              <!-- <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
@@ -115,7 +117,7 @@
               <div class="watch-video d-flex align-items-center position-relative">
                 <i class="bi bi-play-circle"></i>
                 <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox stretched-link">Watch Video</a>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -184,40 +186,45 @@
           <div class="col-lg-6 img-bg" style="background-image: url(assets/img/alt-services.jpg);" data-aos="zoom-in" data-aos-delay="100"></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center">
-            <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
+            <!-- <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3> -->
+            <h3>Our Vision</h3>
+            <p>Our vision is to be the most preferred and trusted organization offering affordable spaces to our customers.</p>
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-easel flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div> -->
+            <!-- End Icon Box -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
+            <!-- <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div> -->
+            <!-- End Icon Box -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
+            <!-- <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Dine Pad</a></h4>
                 <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div> -->
+            <!-- End Icon Box -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
+            <!-- <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Tride clov</a></h4>
                 <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet. Et eligendi</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div> -->
+            <!-- End Icon Box -->
 
           </div>
         </div>
@@ -231,40 +238,45 @@
 
         <div class="row justify-content-around gy-4">
           <div class="col-lg-5 d-flex flex-column justify-content-center">
-            <h3>Non quasi officia eum nobis et rerum epudiandae rem voluptatem</h3>
-            <p>Maxime quia dolorum alias perspiciatis. Earum voluptatem sint at non. Ducimus maxime minima iste magni sit praesentium assumenda minus. Amet rerum saepe tempora vero.</p>
+            <!-- <h3>Non quasi officia eum nobis et rerum epudiandae rem voluptatem</h3> -->
+            <h3>Our Mission</h3>
+            <p>To deliver projects of the highest standards and in the most cost effective method, without compromising quality, ethics, time line, safe work, to our clients' needs.</p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
-              <i class="bi bi-easel flex-shrink-0"></i>
+              <i class="bi bi-calendar-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+                <h4><a href="" class="stretched-link">Timely Delivery</a></h4>
+                <p>At <b>LandmarkRealty</b>, we understand that time is of the essence, so we pride ourselves on timely delivery of our homes. We prioritize timely delivery as we believe it is an integral part of creating a successful residential project.</p>
               </div>
             </div><!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+                <h4><a href="" class="stretched-link">Quality you can trust</a></h4>
+                <p>We have a no-wasted-space design philosophy that ensures maximum return on investment for every home that we build. You are assured of getting the best quality home for every penny that you spend.</p>
+                <p>From our inception, we have consistently delivered quality home across our vast portfolio of residential properties. Every landmark project is built to the standards set out by ourselves and of top-notch quality.</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
+            <!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
+              <i class="bi bi-hand-thumbs-up flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Dine Pad</a></h4>
-                <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
+                <h4><a href="" class="stretched-link">Perfection in every detail</a></h4>
+                <p>Every <b>LandmarkRealty</b> project is built to perfection, with time and care. You deserve the best and high-quality home, <b>LandmarkRealty</b> is committed to providing it.</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div>
+            <!-- End Icon Box -->
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
+            <!-- <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Tride clov</a></h4>
                 <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet. Et eligendi</p>
               </div>
-            </div><!-- End Icon Box -->
+            </div> -->
+            <!-- End Icon Box -->
           </div>
 
           <div class="col-lg-6 img-bg" style="background-image: url(assets/img/alt-services-2.jpg);" data-aos="zoom-in" data-aos-delay="100"></div>
