susant bhai changes

--- a/project-details.html
+++ b/project-details.html
@@ -38,7 +38,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/img/Landmark Realty Logo - White Background.png" alt="">
         <h1>Landmark Realty Group<span>.</span></h1>
       </a>
 
@@ -48,7 +48,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
+          <!-- <li><a href="services.html">Services</a></li> -->
           <li><a href="projects.html">Projects</a></li>
           <!-- <li><a href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -182,27 +182,26 @@
 
     <div class="footer-content position-relative">
       <div class="container">
-        <div class="row">
-
+        <div class="row justify-content-between">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
               <h3>Landmark Realty Group</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Akanta Apan, Old Thane Road, Banamalipur <br>
+                Agartala, Tripura, India - 799001<br><br>
+                <strong>Phone:</strong> +91 9366921132<br>
+                <strong>Email:</strong> info@landmarkrealtygroup.in<br>
               </p>
-              <div class="social-links d-flex mt-3">
+              <!-- <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
-              </div>
+              </div> -->
             </div>
           </div><!-- End footer info column-->
 
-          <div class="col-lg-2 col-md-3 footer-links">
+          <!-- <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><a href="#">Home</a></li>
@@ -211,7 +210,7 @@
               <li><a href="#">Terms of service</a></li>
               <li><a href="#">Privacy policy</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Services</h4>
@@ -222,7 +221,7 @@
               <li><a href="#">Marketing</a></li>
               <li><a href="#">Graphic Design</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Hic solutasetp</h4>
@@ -233,7 +232,7 @@
               <li><a href="#">Dilecta</a></li>
               <li><a href="#">Sit quas consectetur</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Nobis illum</h4>
@@ -244,8 +243,17 @@
               <li><a href="#">Trodelas</a></li>
               <li><a href="#">Flexo</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div> -->
 
+          <div class="col-lg-4 col-md-6 footer-links">
+            <h3>Social Media</h3>
+            <div class="social-links d-flex mt-3">
+              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter h3"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100079211041971&mibextid=LQQJ4d" class="d-flex align-items-center justify-content-center" target="_blank"><i class="bi bi-facebook h3"></i></a>
+              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram h3"></i></a>
+              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin h3"></i></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
