--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/img/Landmark Realty Logo - White Background.png" alt="">
         <h1>Landmark Realty Group<span>.</span></h1>
       </a>
 
@@ -49,7 +49,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" class="active">About</a></li>
-          <li><a href="services.html">Services</a></li>
+          <!-- <li><a href="services.html">Services</a></li> -->
           <li><a href="projects.html">Projects</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -102,7 +102,7 @@
           <div class="col-lg-7">
             <h2>We Build Your Dreams</h2>
             <div class="our-story">
-              <h4>Est 1988</h4>
+              <!-- <h4>Est 1988</h4> -->
               <h3>Our Story</h3>
               <p>At <b>LandmarkRealty</b>, we are dedicated to planning and building eco-friendly and appealing properties with a target to transcend our customers need with our experience in real estate development. We will always continue achieving monumental standards of development coalesced with imaginative ideas, best technology, knowledge and skills.</p>
               <p>We believe in constant upgrades of our process product and people. Every project in <b>LandmarkRealty</b> is well planned and selected to ensure high appreciation for our customers.</p>
@@ -286,7 +286,7 @@
     </section><!-- End Alt Services Section 2 -->
 
     <!-- ======= Our Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -311,7 +311,7 @@
               <span>Chief Executive Officer</span>
               <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow</p>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="200">
             <div class="member-img">
@@ -328,7 +328,7 @@
               <span>Product Manager</span>
               <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
@@ -345,7 +345,7 @@
               <span>CTO</span>
               <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
@@ -362,7 +362,7 @@
               <span>Accountant</span>
               <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam consectetur</p>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="500">
             <div class="member-img">
@@ -379,7 +379,7 @@
               <span>Marketing</span>
               <p>Qui consequuntur quos accusamus magnam quo est molestiae eius laboriosam sunt doloribus quia impedit laborum velit</p>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
             <div class="member-img">
@@ -396,12 +396,12 @@
               <span>Operation</span>
               <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi cupiditate vel</p>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
         </div>
 
       </div>
-    </section><!-- End Our Team Section -->
+    </section> -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
@@ -519,27 +519,26 @@
 
     <div class="footer-content position-relative">
       <div class="container">
-        <div class="row">
-
+        <div class="row justify-content-between">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
               <h3>Landmark Realty Group</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Akanta Apan, Old Thane Road, Banamalipur <br>
+                Agartala, Tripura, India - 799001<br><br>
+                <strong>Phone:</strong> +91 9366921132<br>
+                <strong>Email:</strong> info@landmarkrealtygroup.in<br>
               </p>
-              <div class="social-links d-flex mt-3">
+              <!-- <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
-              </div>
+              </div> -->
             </div>
           </div><!-- End footer info column-->
 
-          <div class="col-lg-2 col-md-3 footer-links">
+          <!-- <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><a href="#">Home</a></li>
@@ -548,7 +547,7 @@
               <li><a href="#">Terms of service</a></li>
               <li><a href="#">Privacy policy</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Services</h4>
@@ -559,7 +558,7 @@
               <li><a href="#">Marketing</a></li>
               <li><a href="#">Graphic Design</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Hic solutasetp</h4>
@@ -570,7 +569,7 @@
               <li><a href="#">Dilecta</a></li>
               <li><a href="#">Sit quas consectetur</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Nobis illum</h4>
@@ -581,8 +580,17 @@
               <li><a href="#">Trodelas</a></li>
               <li><a href="#">Flexo</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div> -->
 
+          <div class="col-lg-4 col-md-6 footer-links">
+            <h3>Social Media</h3>
+            <div class="social-links d-flex mt-3">
+              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter h3"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100079211041971&mibextid=LQQJ4d" class="d-flex align-items-center justify-content-center" target="_blank"><i class="bi bi-facebook h3"></i></a>
+              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram h3"></i></a>
+              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin h3"></i></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
