--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Landmark Realty Logo - White Background.png" alt="">
+        <img src="assets/img/logo/icon.png" alt="">
         <h1>Landmark Realty Group<span>.</span></h1>
       </a>
 
@@ -122,9 +122,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/building-3D-1.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Construction 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-1.jpg" title="Construction 1" data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>Building 3D 1</h4>
+                  <p>Building 3D Model 1</p>
+                  <a href="assets/img/projects/building-3D-1.jpeg" title="Building 3D 1" data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -170,9 +170,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/building-3D-2.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Construction 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-2.jpg" title="Construction 2" data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>Building 3D 2</h4>
+                  <p>Building 3D Model 2</p>
+                  <a href="assets/img/projects/building-3D-2.jpeg" title="Building 3D 2" data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
