--- a/sample-inner-page.html
+++ b/sample-inner-page.html
@@ -38,7 +38,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Landmark Realty Logo - White Background.png" alt="">
+        <img src="assets/img/logo/icon.png" alt="">
         <h1>Landmark Realty Group<span>.</span></h1>
       </a>
 
