--- a/sample-inner-page.html
+++ b/sample-inner-page.html
@@ -39,7 +39,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo/icon.png" alt="">
-        <h1>Landmark Realty Group<span>.</span></h1>
+        <h1>Landmark Realty<span>.</span></h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -110,7 +110,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Landmark Realty Group</h3>
+              <h3>Landmark Realty</h3>
               <p>
                 Akanta Apan, Old Thane Road, Banamalipur <br>
                 Agartala, Tripura, India - 799001<br><br>
@@ -186,7 +186,7 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Landmark Realty Group</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Landmark Realty</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
